initial postgres state db setup

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,8 @@ AWS_DEFAULT_REGION=your_aws_region_here
 S3_BUCKET_NAME=osaa-mvp
 TARGET=dev
 USERNAME=your_name_here
+
+# Postgres Configuration
+POSTGRES_HOST=localhost
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
