--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,4 +15,39 @@ services:
       - TARGET=${TARGET}
       - USERNAME=${USERNAME}
       - DB_PATH=/app/sqlMesh/osaa_mvp.db
+      - POSTGRES_HOST=${POSTGRES_HOST}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+    depends_on:
+      postgres:
+        condition: service_healthy
     command: etl
+
+  postgres:
+    image: postgres:14
+    environment:
+      POSTGRES_DB: sqlmesh_state
+      POSTGRES_USER: sqlmesh
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    ports:
+      - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U sqlmesh"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
+  pgadmin:
+    image: dpage/pgadmin4
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD: admin
+    ports:
+      - "5050:80"
+    depends_on:
+      - postgres
+
+volumes:
+  postgres_data:
