--- a/.github/workflows/daily_transform.yml
+++ b/.github/workflows/daily_transform.yml
@@ -15,9 +15,12 @@ jobs:
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION || 'us-east-1' }}
       S3_BUCKET_NAME: ${{ secrets.S3_BUCKET_NAME }}
+      DEV_S3_BUCKET_NAME: ${{ secrets.DEV_S3_BUCKET_NAME || 'dev-unosaa-data-pipeline' }}
       TARGET: prod
       USERNAME: ${{ secrets.USERNAME || 'osaa-mvp-user' }}
       GATEWAY: local
+      DB_FILENAME: ${{ secrets.DB_FILENAME || 'osaa_mvp.db' }}
+      SQLMESH_DIR: sqlmesh_data
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -40,6 +43,53 @@ jobs:
           
           # Create artifacts directory
           mkdir -p artifacts
+          mkdir -p $SQLMESH_DIR
+
+      - name: Run Create External Models Step
+        id: create_external_models
+        env:
+          TARGET: prod
+          GATEWAY: local
+          AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION || 'us-east-1' }}
+          AWS_ROLE_ARN: ${{ secrets.AWS_ROLE_ARN }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          S3_BUCKET_NAME: ${{ secrets.S3_BUCKET_NAME }}
+          USERNAME: ${{ secrets.USERNAME || 'osaa-mvp-user' }}
+        run: |
+          echo "Running create_external_models to handle unbound tables..."
+          
+          # Check for and download database file if needed
+          echo "Checking for database file in S3 buckets..."
+          aws s3 ls s3://$S3_BUCKET_NAME/ --recursive | grep -i "\.db$" || echo "No DB files in main bucket"
+          aws s3 ls s3://$DEV_S3_BUCKET_NAME/ --recursive | grep -i "\.db$" || echo "No DB files in dev bucket"
+          
+          # Try to find and download the database file from either bucket
+          if aws s3 ls s3://$S3_BUCKET_NAME/ --recursive | grep -i "$DB_FILENAME"; then
+            echo "Found database in main bucket"
+            aws s3 cp s3://$S3_BUCKET_NAME/$DB_FILENAME $SQLMESH_DIR/$DB_FILENAME || echo "Could not download database file from main bucket"
+          elif aws s3 ls s3://$DEV_S3_BUCKET_NAME/ --recursive | grep -i "$DB_FILENAME"; then
+            echo "Found database in dev bucket"
+            aws s3 cp s3://$DEV_S3_BUCKET_NAME/$DB_FILENAME $SQLMESH_DIR/$DB_FILENAME || echo "Could not download database file from dev bucket"
+          else
+            echo "Database file not found in any bucket"
+          fi
+          
+          # Run the create_external_models command
+          docker run --rm \
+            -e TARGET=$TARGET \
+            -e GATEWAY=$GATEWAY \
+            -e AWS_ROLE_ARN=$AWS_ROLE_ARN \
+            -e AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID \
+            -e AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY \
+            -e AWS_DEFAULT_REGION=$AWS_DEFAULT_REGION \
+            -e S3_BUCKET_NAME=$S3_BUCKET_NAME \
+            -e USERNAME=$USERNAME \
+            -v $(pwd)/$SQLMESH_DIR:/app/sqlMesh \
+            ghcr.io/un-osaa/osaa-mvp:latest \
+            python -m sqlmesh create_external_models | tee artifacts/create_external_models.log
+          
+          echo "Create external models step completed"
 
       - name: Run Docker ETL Command
         id: etl_run
@@ -55,14 +105,20 @@ jobs:
         run: |
           echo "Starting ETL process..."
           
-          # Check for and download database file if needed
-          echo "Checking for database file in S3 buckets..."
-          aws s3 ls s3://$S3_BUCKET_NAME/ --recursive | grep -i "\.db$" || echo "No DB files in main bucket"
-          aws s3 ls s3://dev-unosaa-data-pipeline/ --recursive | grep -i "\.db$" || echo "No DB files in dev bucket"
-          
-          # Try to download the database file
-          mkdir -p ./sqlMesh
-          aws s3 cp s3://dev-unosaa-data-pipeline/osaa_mvp.db ./sqlMesh/osaa_mvp.db || echo "Could not download database file"
+          # Check for and download database file if needed (in case previous step failed)
+          if [ ! -f "$SQLMESH_DIR/$DB_FILENAME" ]; then
+            echo "Database file not found from previous step, attempting to download again..."
+            
+            if aws s3 ls s3://$S3_BUCKET_NAME/ --recursive | grep -i "$DB_FILENAME"; then
+              echo "Found database in main bucket"
+              aws s3 cp s3://$S3_BUCKET_NAME/$DB_FILENAME $SQLMESH_DIR/$DB_FILENAME || echo "Could not download database file"
+            elif aws s3 ls s3://$DEV_S3_BUCKET_NAME/ --recursive | grep -i "$DB_FILENAME"; then
+              echo "Found database in dev bucket"
+              aws s3 cp s3://$DEV_S3_BUCKET_NAME/$DB_FILENAME $SQLMESH_DIR/$DB_FILENAME || echo "Could not download database file"
+            else
+              echo "Database file not found in any bucket"
+            fi
+          fi
           
           # Run the ETL process with logging
           docker run --rm \
@@ -74,7 +130,7 @@ jobs:
             -e AWS_DEFAULT_REGION=$AWS_DEFAULT_REGION \
             -e S3_BUCKET_NAME=$S3_BUCKET_NAME \
             -e USERNAME=$USERNAME \
-            -v $(pwd)/sqlMesh:/app/sqlMesh \
+            -v $(pwd)/$SQLMESH_DIR:/app/sqlMesh \
             ghcr.io/un-osaa/osaa-mvp:latest \
             etl prod | tee artifacts/etl_output.log
           
@@ -84,7 +140,7 @@ jobs:
           
           # Check the contents of the sqlMesh directory
           echo "Contents of sqlMesh directory:" | tee -a artifacts/etl_output.log
-          ls -la ./sqlMesh/ | tee -a artifacts/etl_output.log
+          ls -la $SQLMESH_DIR/ | tee -a artifacts/etl_output.log
           
           exit $ETL_EXIT_CODE
 
@@ -94,46 +150,4 @@ jobs:
         with:
           name: etl-logs
           path: artifacts/
-          retention-days: 5
-
-      - name: Notify on failure
-        if: failure()
-        uses: slackapi/slack-github-action@v1.24.0
-        with:
-          payload: |
-            {
-              "text": "🚨 ETL Job Failed 🚨",
-              "blocks": [
-                {
-                  "type": "section",
-                  "text": {
-                    "type": "mrkdwn",
-                    "text": "*ETL Pipeline Failure*\n⚠️ The daily ETL job has failed. <${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}|View the logs>"
-                  }
-                },
-                {
-                  "type": "section",
-                  "fields": [
-                    {
-                      "type": "mrkdwn",
-                      "text": "*Repository:*\n${{ github.repository }}"
-                    },
-                    {
-                      "type": "mrkdwn",
-                      "text": "*Workflow:*\n${{ github.workflow }}"
-                    },
-                    {
-                      "type": "mrkdwn",
-                      "text": "*Triggered By:*\n${{ github.event_name }}"
-                    },
-                    {
-                      "type": "mrkdwn",
-                      "text": "*Run ID:*\n${{ github.run_id }}"
-                    }
-                  ]
-                }
-              ]
-            }
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-          SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK 
+          retention-days: 5 
