--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ colorlog==6.8.0
 duckdb==1.1.3
 fsspec>=2024.2.0
 git+https://github.com/ibis-project/ibis.git@bd30ba5#egg=ibis-framework[duckdb]
+ipython==8.12.0  # Pinned to avoid compatibility issues with SQLMesh
 sqlfluff==3.0.0
 sqlglot==26.2.1
 sqlmesh[web]==0.146.0
