Add AWS_SESSION_TOKEN to docker-compose and ensure boto3 is installed in Dockerfile

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ x-common-config: &common-config
   environment:
     - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
     - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
+    - AWS_SESSION_TOKEN=${AWS_SESSION_TOKEN}
     - AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION}
     - AWS_ROLE_ARN=${AWS_ROLE_ARN}
     - S3_BUCKET_NAME=${S3_BUCKET_NAME}
