Update .env.example to enhance AWS authentication configuration and clarify environment settings. Add AWS_SESSION_TOKEN and improve comments for better understanding.

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,39 @@
-# AWS Credentials
-AWS_ACCESS_KEY_ID=your_access_key_id
-AWS_SECRET_ACCESS_KEY=your_secret_access_key
-AWS_DEFAULT_REGION=us-east-1
+# ===========================================================
+# AWS Authentication
+# ===========================================================
+# AUTHENTICATION CREDENTIALS (Your AWS Access Portal Account)
+# These authenticate you to AWS and are used to assume the role
+AWS_ACCESS_KEY_ID=your_access_key
+AWS_SECRET_ACCESS_KEY=your_secret_key
+# Required if using temporary credentials (Access Key starting with ASIA)
+AWS_SESSION_TOKEN=your_session_token
+AWS_DEFAULT_REGION=eu-west-1  # Recommended for best compatibility
+
+# ROLE CONFIGURATION (OSAA Data Pipeline Account)
+# The role that will be assumed for all S3 operations
+# Format: arn:aws:iam::{ACCOUNT_ID}:role/{ROLE_NAME}
 AWS_ROLE_ARN=arn:aws:iam::123456789012:role/your-role-name
 
-# S3 Configuration
+# ===========================================================
+# S3 Storage Configuration
+# ===========================================================
+# The S3 bucket where data will be stored
 S3_BUCKET_NAME=your_bucket_name
+
+# ===========================================================
+# Environment Settings
+# ===========================================================
+# Environment for deployment (dev, qa, or prod)
 TARGET=dev
+
+# Your username for development environments
 USERNAME=your_username
 
+# ===========================================================
 # SQLMesh Configuration
+# ===========================================================
+# SQLMesh gateway type
 GATEWAY=local
 
+# Port for the SQLMesh UI
 UI_PORT=8080
